fix: alignment for charts

--- a/app/assets/styles/core/_rtl.scss
+++ b/app/assets/styles/core/_rtl.scss
@@ -130,7 +130,7 @@
 
   .overview-charts {
     .chart__inline--labels {
-      float: right;
+    
     }
   }
 
